Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.7.0
Description
We picked up this dependency recently. I don't think this is a blocker for 0.7.0, but it impacts static linkers (e.g. linkers of parquet-cpp)
This was introduced in ARROW-1339 https://github.com/apache/arrow/commit/94b7cfafae0bda8f68ee3e5e9702c954b0116203
cc mdeepak
Attachments
Issue Links
- is depended upon by
-
PARQUET-1105 [CPP] Remove libboost_system dependency
-
- Resolved
-
- links to