ARROW-1536:[C++] Do not transitively depend on libboost_system