cpp/src/arrow/io/file.cc
@@ -107,16 +107,33 @@
 #include "arrow/status.h"
 #include "arrow/util/logging.h"
 
-#include <boost/filesystem.hpp>           // NOLINT
-#include <boost/system/system_error.hpp>  // NOLINT
-
-namespace fs = boost::filesystem;
-
 namespace arrow {
 namespace io {
 
+#if defined(__MSC_VER__)
+#include <boost/filesystem.hpp>           // NOLINT
+#include <boost/system/system_error.hpp>  // NOLINT
+#define PlatformFilename fs::path
+namespace fs = boost::filesystem;
+#else
+struct PlatformFilename {
+  static Status Init(const std::string& utf8_path, PlatformFilename* out) {
+    out->utf8_path = utf8_path;
+    return Status::OK();
+  }
+
+  const char* c_str() const { return utf8_path.c_str(); }
+
+  const std::string string() const { return utf8_path; }
+
+  size_t length() const { return utf8_path.size(); }
+
+  std::string utf8_path;
+};
+#endif
+
 static inline Status CheckOpenResult(int ret, int errno_actual,
-                                     const fs::path& file_name) {
+                                     const PlatformFilename& file_name) {
   if (ret == -1) {
     // TODO: errno codes to strings
     std::stringstream ss;
@@ -137,7 +154,7 @@ static inline int64_t lseek64_compat(int fd, int64_t pos, int whence) {
 #endif
 }
 
-static inline Status FileOpenReadable(const fs::path& file_name, int* fd) {
+static inline Status FileOpenReadable(const PlatformFilename& file_name, int* fd) {
   int ret;
   errno_t errno_actual = 0;
 #if defined(_MSC_VER)
@@ -152,7 +169,7 @@ static inline Status FileOpenReadable(const fs::path& file_name, int* fd) {
   return CheckOpenResult(ret, errno_actual, file_name);
 }
 
-static inline Status FileOpenWriteable(const fs::path& file_name, bool write_only,
+static inline Status FileOpenWriteable(const PlatformFilename& file_name, bool write_only,
                                        bool truncate, int* fd) {
   int ret;
   errno_t errno_actual = 0;
@@ -366,20 +383,20 @@ class OSFile {
 
  protected:
   Status SetFileName(const std::string& file_name) {
-    try {
 #if defined(_MSC_VER)
+    try {
       std::codecvt_utf8_utf16<wchar_t> utf16_converter;
       file_name_.assign(file_name, utf16_converter);
-#else
-      file_name_ = file_name;
-#endif
     } catch (boost::system::system_error& e) {
       return Status::Invalid(e.what());
     }
+#else
+      PlatformFilename::Init(file_name, &file_name_);
+#endif
     return Status::OK();
   }
 
-  fs::path file_name_;
+  PlatformFilename file_name_;
 
   std::mutex lock_;
 
